--- a/static/html/index.html
+++ b/static/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<title>GO - ECHO - VUE</title>
@@ -63,6 +63,6 @@
 		</div>
 	</div>
 
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="../js/app.js"></script>
 </body>
 </html>
