--- a/static/html/index.html
+++ b/static/html/index.html
@@ -14,54 +14,210 @@
 </head>
 <body>
 
-	<div class="container">
-		<div class="row">
-			<div class="col-md-8">
-				<h1>My Tasks</h1>
-
-				<div class="input-group">
-					<input type="text" class="form-control" placeholder="New Task" v-on:keyup.enter="createTask" v-model="newTask.name" autofocus>
-					<span class="input-group-btn">
-						<button class="btn btn-primary" type="button" v-on:click="createTask">Create</button>
-					</span>
+<div class="container">
+	<div class="row clearfix">
+		<div class="col-md-12 column">
+			<nav class="navbar navbar-default" role="navigation">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">Brand</a>
 				</div>
 
-				<br>
-				<h2>On Going</h2>
-				<div v-for="task in tasks" style="margin-bottom: 5px;">
-					<div v-if="task.done===false" class="input-group">
-						<span class="input-group-btn">
-							<button class="btn btn-info" type="button" :disabled="task.done===true" v-on:click="updateTask(task, true)"><i class="fa fa-check" aria-hidden="true"></i></button>
-						</span>
-
-						<input type="text" class="form-control" :disabled="task.done===true" v-model="task.name" v-on:keyup.enter="updateTask(task)">
-
-						<span class="input-group-btn">
-							<button class="btn btn-info" type="button" v-on:click="updateTask(task)"><i class="fa fa-edit" aria-hidden="true"></i></button>
-							<button class="btn btn-danger" type="button" v-on:click="deleteTask(task.id)"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
-						</span>
-					</div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li class="active">
+							<a href="#">Link</a>
+						</li>
+						<li>
+							<a href="#">Link</a>
+						</li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
+							<ul class="dropdown-menu">
+								<li>
+									<a href="#">Action</a>
+								</li>
+								<li>
+									<a href="#">Another action</a>
+								</li>
+								<li>
+									<a href="#">Something else here</a>
+								</li>
+								<li class="divider">
+								</li>
+								<li>
+									<a href="#">Separated link</a>
+								</li>
+								<li class="divider">
+								</li>
+								<li>
+									<a href="#">One more separated link</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+					<form class="navbar-form navbar-left" role="search">
+						<div class="form-group">
+							<input type="text" class="form-control" />
+						</div> <button type="submit" class="btn btn-default">Submit</button>
+					</form>
+					<ul class="nav navbar-nav navbar-right">
+						<li>
+							<a href="#">Link</a>
+						</li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
+							<ul class="dropdown-menu">
+								<li>
+									<a href="#">Action</a>
+								</li>
+								<li>
+									<a href="#">Another action</a>
+								</li>
+								<li>
+									<a href="#">Something else here</a>
+								</li>
+								<li class="divider">
+								</li>
+								<li>
+									<a href="#">Separated link</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
 				</div>
 
-				<br>
-				<h2>Completed</h2>
-				<div v-for="task in tasks" style="margin-bottom: 5px;">
-					<div v-if="task.done===true" class="input-group">
-						<span class="input-group-btn">
-							<button class="btn btn-info" type="button" :disabled="task.done===true" v-on:click="updateTask(task, true)"><i class="fa fa-check" aria-hidden="true"></i></button>
-						</span>
-
-						<input type="text" class="form-control" :disabled="task.done===true" v-model="task.name" v-on:keyup.enter="updateTask(task)">
-
-						<span class="input-group-btn">
-							<button class="btn btn-info" type="button" :disabled="task.done===true" v-on:click="updateTask(task)"><i class="fa fa-edit" aria-hidden="true"></i></button>
-							<button class="btn btn-danger" type="button" v-on:click="deleteTask(task.id)"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
-						</span>
-					</div>
-				</div>
+			</nav>
+		</div>
+	</div>
+	<div class="row clearfix">
+		<div class="col-md-12 column">
+			<div class="btn-group">
+				<button class="btn btn-default" type="button"><em class="glyphicon glyphicon-align-left"></em> 左</button> <button class="btn btn-default" type="button"><em class="glyphicon glyphicon-align-center"></em> 中</button> <button class="btn btn-default" type="button"><em class="glyphicon glyphicon-align-right"></em> 右</button> <button class="btn btn-default" type="button"><em class="glyphicon glyphicon-align-justify"></em> 全</button>
 			</div>
 		</div>
 	</div>
+	<div class="row clearfix">
+		<div class="col-md-12 column">
+			<table class="table">
+				<thead>
+				<tr>
+					<th>
+						编号
+					</th>
+					<th>
+						产品
+					</th>
+					<th>
+						交付时间
+					</th>
+					<th>
+						状态
+					</th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr>
+					<td>
+						1
+					</td>
+					<td>
+						TB - Monthly
+					</td>
+					<td>
+						01/04/2012
+					</td>
+					<td>
+						Default
+					</td>
+				</tr>
+				<tr class="success">
+					<td>
+						1
+					</td>
+					<td>
+						TB - Monthly
+					</td>
+					<td>
+						01/04/2012
+					</td>
+					<td>
+						Approved
+					</td>
+				</tr>
+				<tr class="error">
+					<td>
+						2
+					</td>
+					<td>
+						TB - Monthly
+					</td>
+					<td>
+						02/04/2012
+					</td>
+					<td>
+						Declined
+					</td>
+				</tr>
+				<tr class="warning">
+					<td>
+						3
+					</td>
+					<td>
+						TB - Monthly
+					</td>
+					<td>
+						03/04/2012
+					</td>
+					<td>
+						Pending
+					</td>
+				</tr>
+				<tr class="info">
+					<td>
+						4
+					</td>
+					<td>
+						TB - Monthly
+					</td>
+					<td>
+						04/04/2012
+					</td>
+					<td>
+						Call in to confirm
+					</td>
+				</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+	<div class="row clearfix">
+		<div class="col-md-12 column">
+			<ul class="pagination">
+				<li>
+					<a href="#">Prev</a>
+				</li>
+				<li>
+					<a href="#">1</a>
+				</li>
+				<li>
+					<a href="#">2</a>
+				</li>
+				<li>
+					<a href="#">3</a>
+				</li>
+				<li>
+					<a href="#">4</a>
+				</li>
+				<li>
+					<a href="#">5</a>
+				</li>
+				<li>
+					<a href="#">Next</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
 
 <script type="text/javascript" src="../js/app.js"></script>
 </body>
